# dual-loop-temporary

./: .env  .gitignore  PYTEST_GUIDE.py  README.md  SETUP_COMPLETE.md  main.py  pyproject.toml  pytest.ini  requirements-test.txt  test_celery.py
app/core/entities/: __init__.py  analysis.py  auth.py  extraction_result.py  goal.py  identity.py  journal.py  journal_analysis.py  repository.py  repository_analysis.py  score.py  telemetry.py  user.py  webhook.py
app/core/ports/: __init__.py  analysis_repo.py  auth_ports.py  auth_repo.py  daily_divergence_port.py  identity_encoder.py  journal_llm.py  journal_ports.py  journal_repo.py  notification.py  oauth_port.py  onboard_user_port.py  password_hasher.py  repository_ports.py  telemetry_repo.py  token_generator.py  webhook_repo.py
app/core/use_cases/: __init__.py  analyze_journal.py  analyze_repository.py  auth_use_cases.py  calculate_gap.py  create_goal.py  create_journal.py  create_repository.py  get_journal_by_date.py  github_oauth_login.py  login_user.py  onboard_user.py  process_telemetry.py  process_webhook.py  register_user.py  repository_queries.py  verify_journal.py
app/infrastructure/: config.py
app/infrastructure/adapters/: __init__.py  bcrypt_hasher.py  database.py  extraction_strategies.py  fcm_notifier.py  file_extraction_service.py  git_clone_service.py  github_oauth.py  github_oauth_adapter.py  (+21 more)
app/server/: auth_config.py  dependencies.py  logging_config.py  main.py
tests/: README.md  conftest.py
tests/debug_checks/: __init__.py  test_config_safety.py
tests/integration/: test_auth_endpoints.py
(+17 files in other folders)
