[project]
name = "dual-loop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.19.0",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "pydantic-settings>=2.2.1",
    "numpy>=1.26.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.2",
    "requests>=2.31.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "axios>=0.4.0",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
    "email-validator>=2.3.0",
]

